grammar/generated/VagaxParser.py
# Generated from VagaxParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class VagaxParser ( Parser ):

    grammarFileName = "VagaxParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'ifvag'", "'elsevag'", "'whilevag'", 
                     "'forvag'", "'invag'", "'functionvag'", "'returnvag'", 
                     "'endvag'", "'importvag'", "'asvag'", "'intvag'", "'floatvag'", 
                     "'boolvag'", "'stringvag'", "'listvag'", "'diccvag'", 
                     "'matrixvag'", "'dataframevag'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'^'", "'='", "':'", "','", "';'", "'.'", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "'=='", "'!='", 
                     "'<='", "'>='", "'<'", "'>'", "'||'", "'&&'", "'!'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "WHILE", "FOR", "IN", "FUNCTION", 
                      "RETURN", "END", "IMPORT", "AS", "INT", "FLOAT", "BOOL_T", 
                      "STRING_T", "LIST", "DICC", "MATRIX", "DATAFRAME", 
                      "BOOL_LIT", "NUMBER", "STRING", "ID", "PLUS", "MINUS", 
                      "MUL", "DIV", "MOD", "POW", "ASSIGN", "COLON", "COMMA", 
                      "SEMI", "DOT", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
                      "LBRACE", "RBRACE", "EQ", "NEQ", "LE", "GE", "LT", 
                      "GT", "OR", "AND", "NOT", "COMMENT", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_varDecl = 2
    RULE_type = 3
    RULE_assignment = 4
    RULE_ifStatement = 5
    RULE_whileStatement = 6
    RULE_forStatement = 7
    RULE_block = 8
    RULE_functionDecl = 9
    RULE_paramList = 10
    RULE_returnStmt = 11
    RULE_expr = 12
    RULE_functionCall = 13
    RULE_argList = 14
    RULE_literal = 15

    ruleNames =  [ "program", "statement", "varDecl", "type", "assignment", 
                   "ifStatement", "whileStatement", "forStatement", "block", 
                   "functionDecl", "paramList", "returnStmt", "expr", "functionCall", 
                   "argList", "literal" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    WHILE=3
    FOR=4
    IN=5
    FUNCTION=6
    RETURN=7
    END=8
    IMPORT=9
    AS=10
    INT=11
    FLOAT=12
    BOOL_T=13
    STRING_T=14
    LIST=15
    DICC=16
    MATRIX=17
    DATAFRAME=18
    BOOL_LIT=19
    NUMBER=20
    STRING=21
    ID=22
    PLUS=23
    MINUS=24
    MUL=25
    DIV=26
    MOD=27
    POW=28
    ASSIGN=29
    COLON=30
    COMMA=31
    SEMI=32
    DOT=33
    LPAREN=34
    RPAREN=35
    LBRACK=36
    RBRACK=37
    LBRACE=38
    RBRACE=39
    EQ=40
    NEQ=41
    LE=42
    GE=43
    LT=44
    GT=45
    OR=46
    AND=47
    NOT=48
    COMMENT=49
    WS=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(VagaxParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VagaxParser.StatementContext)
            else:
                return self.getTypedRuleContext(VagaxParser.StatementContext,i)


        def getRuleIndex(self):
            return VagaxParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = VagaxParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 281492164966618) != 0):
                self.state = 32
                self.statement()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.match(VagaxParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(VagaxParser.VarDeclContext,0)


        def SEMI(self):
            return self.getToken(VagaxParser.SEMI, 0)

        def assignment(self):
            return self.getTypedRuleContext(VagaxParser.AssignmentContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(VagaxParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(VagaxParser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(VagaxParser.ForStatementContext,0)


        def functionDecl(self):
            return self.getTypedRuleContext(VagaxParser.FunctionDeclContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(VagaxParser.ReturnStmtContext,0)


        def expr(self):
            return self.getTypedRuleContext(VagaxParser.ExprContext,0)


        def getRuleIndex(self):
            return VagaxParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = VagaxParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 56
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.varDecl()
                self.state = 41
                self.match(VagaxParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.assignment()
                self.state = 44
                self.match(VagaxParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.ifStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 47
                self.whileStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 48
                self.forStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 49
                self.functionDecl()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 50
                self.returnStmt()
                self.state = 51
                self.match(VagaxParser.SEMI)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 53
                self.expr(0)
                self.state = 54
                self.match(VagaxParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(VagaxParser.TypeContext,0)


        def ID(self):
            return self.getToken(VagaxParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(VagaxParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(VagaxParser.ExprContext,0)


        def getRuleIndex(self):
            return VagaxParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = VagaxParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDecl)
        try:
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.type_()
                self.state = 59
                self.match(VagaxParser.ID)
                self.state = 60
                self.match(VagaxParser.ASSIGN)
                self.state = 61
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.type_()
                self.state = 64
                self.match(VagaxParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(VagaxParser.INT, 0)

        def FLOAT(self):
            return self.getToken(VagaxParser.FLOAT, 0)

        def BOOL_T(self):
            return self.getToken(VagaxParser.BOOL_T, 0)

        def STRING_T(self):
            return self.getToken(VagaxParser.STRING_T, 0)

        def LIST(self):
            return self.getToken(VagaxParser.LIST, 0)

        def MATRIX(self):
            return self.getToken(VagaxParser.MATRIX, 0)

        def DICC(self):
            return self.getToken(VagaxParser.DICC, 0)

        def DATAFRAME(self):
            return self.getToken(VagaxParser.DATAFRAME, 0)

        def getRuleIndex(self):
            return VagaxParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = VagaxParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 522240) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(VagaxParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(VagaxParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(VagaxParser.ExprContext,0)


        def getRuleIndex(self):
            return VagaxParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = VagaxParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(VagaxParser.ID)
            self.state = 71
            self.match(VagaxParser.ASSIGN)
            self.state = 72
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(VagaxParser.IF, 0)

        def LPAREN(self):
            return self.getToken(VagaxParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(VagaxParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(VagaxParser.RPAREN, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VagaxParser.BlockContext)
            else:
                return self.getTypedRuleContext(VagaxParser.BlockContext,i)


        def END(self):
            return self.getToken(VagaxParser.END, 0)

        def ELSE(self):
            return self.getToken(VagaxParser.ELSE, 0)

        def getRuleIndex(self):
            return VagaxParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = VagaxParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(VagaxParser.IF)
            self.state = 75
            self.match(VagaxParser.LPAREN)
            self.state = 76
            self.expr(0)
            self.state = 77
            self.match(VagaxParser.RPAREN)
            self.state = 78
            self.block()
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 79
                self.match(VagaxParser.ELSE)
                self.state = 80
                self.block()


            self.state = 83
            self.match(VagaxParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(VagaxParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(VagaxParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(VagaxParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(VagaxParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(VagaxParser.BlockContext,0)


        def END(self):
            return self.getToken(VagaxParser.END, 0)

        def getRuleIndex(self):
            return VagaxParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = VagaxParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(VagaxParser.WHILE)
            self.state = 86
            self.match(VagaxParser.LPAREN)
            self.state = 87
            self.expr(0)
            self.state = 88
            self.match(VagaxParser.RPAREN)
            self.state = 89
            self.block()
            self.state = 90
            self.match(VagaxParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(VagaxParser.FOR, 0)

        def LPAREN(self):
            return self.getToken(VagaxParser.LPAREN, 0)

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VagaxParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(VagaxParser.AssignmentContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(VagaxParser.SEMI)
            else:
                return self.getToken(VagaxParser.SEMI, i)

        def expr(self):
            return self.getTypedRuleContext(VagaxParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(VagaxParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(VagaxParser.BlockContext,0)


        def END(self):
            return self.getToken(VagaxParser.END, 0)

        def getRuleIndex(self):
            return VagaxParser.RULE_forStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStatement" ):
                return visitor.visitForStatement(self)
            else:
                return visitor.visitChildren(self)




    def forStatement(self):

        localctx = VagaxParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_forStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(VagaxParser.FOR)
            self.state = 93
            self.match(VagaxParser.LPAREN)
            self.state = 94
            self.assignment()
            self.state = 95
            self.match(VagaxParser.SEMI)
            self.state = 96
            self.expr(0)
            self.state = 97
            self.match(VagaxParser.SEMI)
            self.state = 98
            self.assignment()
            self.state = 99
            self.match(VagaxParser.RPAREN)
            self.state = 100
            self.block()
            self.state = 101
            self.match(VagaxParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(VagaxParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(VagaxParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VagaxParser.StatementContext)
            else:
                return self.getTypedRuleContext(VagaxParser.StatementContext,i)


        def getRuleIndex(self):
            return VagaxParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = VagaxParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(VagaxParser.LBRACE)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 281492164966618) != 0):
                self.state = 104
                self.statement()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 110
            self.match(VagaxParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(VagaxParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(VagaxParser.ID, 0)

        def LPAREN(self):
            return self.getToken(VagaxParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(VagaxParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(VagaxParser.BlockContext,0)


        def END(self):
            return self.getToken(VagaxParser.END, 0)

        def paramList(self):
            return self.getTypedRuleContext(VagaxParser.ParamListContext,0)


        def getRuleIndex(self):
            return VagaxParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = VagaxParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(VagaxParser.FUNCTION)
            self.state = 113
            self.match(VagaxParser.ID)
            self.state = 114
            self.match(VagaxParser.LPAREN)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 115
                self.paramList()


            self.state = 118
            self.match(VagaxParser.RPAREN)
            self.state = 119
            self.block()
            self.state = 120
            self.match(VagaxParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(VagaxParser.ID)
            else:
                return self.getToken(VagaxParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(VagaxParser.COMMA)
            else:
                return self.getToken(VagaxParser.COMMA, i)

        def getRuleIndex(self):
            return VagaxParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = VagaxParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(VagaxParser.ID)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==31:
                self.state = 123
                self.match(VagaxParser.COMMA)
                self.state = 124
                self.match(VagaxParser.ID)
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(VagaxParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(VagaxParser.ExprContext,0)


        def getRuleIndex(self):
            return VagaxParser.RULE_returnStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)




    def returnStmt(self):

        localctx = VagaxParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_returnStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(VagaxParser.RETURN)
            self.state = 131
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(VagaxParser.NOT, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VagaxParser.ExprContext)
            else:
                return self.getTypedRuleContext(VagaxParser.ExprContext,i)


        def LPAREN(self):
            return self.getToken(VagaxParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(VagaxParser.RPAREN, 0)

        def functionCall(self):
            return self.getTypedRuleContext(VagaxParser.FunctionCallContext,0)


        def literal(self):
            return self.getTypedRuleContext(VagaxParser.LiteralContext,0)


        def ID(self):
            return self.getToken(VagaxParser.ID, 0)

        def POW(self):
            return self.getToken(VagaxParser.POW, 0)

        def MUL(self):
            return self.getToken(VagaxParser.MUL, 0)

        def DIV(self):
            return self.getToken(VagaxParser.DIV, 0)

        def MOD(self):
            return self.getToken(VagaxParser.MOD, 0)

        def PLUS(self):
            return self.getToken(VagaxParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(VagaxParser.MINUS, 0)

        def EQ(self):
            return self.getToken(VagaxParser.EQ, 0)

        def NEQ(self):
            return self.getToken(VagaxParser.NEQ, 0)

        def LT(self):
            return self.getToken(VagaxParser.LT, 0)

        def GT(self):
            return self.getToken(VagaxParser.GT, 0)

        def LE(self):
            return self.getToken(VagaxParser.LE, 0)

        def GE(self):
            return self.getToken(VagaxParser.GE, 0)

        def AND(self):
            return self.getToken(VagaxParser.AND, 0)

        def OR(self):
            return self.getToken(VagaxParser.OR, 0)

        def getRuleIndex(self):
            return VagaxParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = VagaxParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 134
                self.match(VagaxParser.NOT)
                self.state = 135
                self.expr(5)
                pass

            elif la_ == 2:
                self.state = 136
                self.match(VagaxParser.LPAREN)
                self.state = 137
                self.expr(0)
                self.state = 138
                self.match(VagaxParser.RPAREN)
                pass

            elif la_ == 3:
                self.state = 140
                self.functionCall()
                pass

            elif la_ == 4:
                self.state = 141
                self.literal()
                pass

            elif la_ == 5:
                self.state = 142
                self.match(VagaxParser.ID)
                pass

